[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/template.tscn" type="PackedScene" id=1]
[ext_resource path="res://Xolonium_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Model/Labels/NewAccHeader.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/randy_scripts/Label.gd" type="Script" id=4]
[ext_resource path="res://Model/Labels/Cancel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Model/Labels/CreateAccount.tscn" type="PackedScene" id=7]
[ext_resource path="res://menus/Screens_Randy/NewAccount.gd" type="Script" id=8]

[node name="NewAccountScreen" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="MarginContainer" parent="TextureRect" index="0"]
anchor_top = 1.93836e-10
margin_right = -46.0
margin_bottom = -62.0
rect_scale = Vector2( 0.85, 0.85 )

[node name="ColorRect" parent="TextureRect/MarginContainer" index="0"]
margin_right = 1296.0
margin_bottom = 1066.0

[node name="MarginContainer" parent="TextureRect/MarginContainer" index="1"]
margin_right = 1296.0
margin_bottom = 1066.0

[node name="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer" index="0"]
margin_right = 946.0
margin_bottom = 866.0
custom_constants/separation = 55

[node name="GridContainer" type="GridContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="0"]
margin_right = 896.0
margin_bottom = 598.0
custom_constants/vseparation = 50
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="0"]
margin_right = 386.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "Email Address: "
align = 2

[node name="LineEdit" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="1"]
margin_left = 396.0
margin_right = 896.0
margin_bottom = 58.0
rect_min_size = Vector2( 500, 0 )

[node name="Label2" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="2"]
margin_top = 108.0
margin_right = 386.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 2 )
text = "Password: "
align = 2

[node name="LineEdit2" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="3"]
margin_left = 396.0
margin_top = 108.0
margin_right = 896.0
margin_bottom = 166.0
rect_min_size = Vector2( 500, 0 )

[node name="Label3" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="4"]
margin_top = 216.0
margin_right = 386.0
margin_bottom = 274.0
custom_fonts/font = ExtResource( 2 )
text = "Nickname:"
align = 2

[node name="LineEdit3" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="5"]
margin_left = 396.0
margin_top = 216.0
margin_right = 896.0
margin_bottom = 274.0
rect_min_size = Vector2( 500, 0 )

[node name="Label7" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="6"]
margin_top = 324.0
margin_right = 386.0
margin_bottom = 382.0
custom_fonts/font = ExtResource( 2 )
text = "Account Type:"
align = 2

[node name="OptionButton" type="OptionButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="7"]
margin_left = 396.0
margin_top = 324.0
margin_right = 896.0
margin_bottom = 382.0
rect_min_size = Vector2( 500, 0 )

[node name="Label4" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="8"]
margin_top = 432.0
margin_right = 386.0
margin_bottom = 490.0
custom_fonts/font = ExtResource( 2 )
text = "School: "
align = 2

[node name="OptionButton3" type="OptionButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="9"]
margin_left = 396.0
margin_top = 432.0
margin_right = 896.0
margin_bottom = 490.0
rect_min_size = Vector2( 500, 0 )

[node name="Label5" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="10"]
margin_top = 540.0
margin_right = 386.0
margin_bottom = 598.0
custom_fonts/font = ExtResource( 2 )
text = "Class:  "
align = 2

[node name="OptionButton2" type="OptionButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="11"]
margin_left = 396.0
margin_top = 540.0
margin_right = 896.0
margin_bottom = 598.0
rect_min_size = Vector2( 500, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="1"]
margin_top = 653.0
margin_right = 896.0
margin_bottom = 743.0
custom_constants/separation = 50
alignment = 1

[node name="Button" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 7 )]
margin_left = 63.0
margin_right = 423.0
margin_bottom = 90.0
script = ExtResource( 4 )

[node name="Button2" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 6 )]
margin_left = 473.0
margin_right = 833.0
margin_bottom = 90.0

[node name="HTTPRequest" type="HTTPRequest" parent="." index="3"]

[node name="Header" parent="." index="4" instance=ExtResource( 3 )]
margin_top = 20.0
[connection signal="item_selected" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer/OptionButton3" to="." method="_on_OptionButton3_item_selected"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
